.njk files are generally more useful and still support markdown

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -15,6 +15,7 @@ embl_content_meta_properties:
   lastreview: tocome
   reviewcycle: tocome
   expiry: tocome
+templateEngineOverride: njk,md
 ---
 <section class="cp-container vf-grid vf-grid__col-1">
   <nav class="vf-navigation vf-navigation--global">
