--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -15,6 +15,7 @@ embl_content_meta_properties:
   lastreview: tocome
   reviewcycle: tocome
   expiry: tocome
+templateEngineOverride: njk,md
 ---
 
 
@@ -38,12 +39,12 @@ embl_content_meta_properties:
           <button class="vf-button">Search</button>
         </form>
   <p>Browse <a href="#">Jobs</a>, <a href="#">Conferences</a>, <a href="#">Publications</a>, or <a href="#">People</a></p>
-  
+
 </div>
 <div>
   <img src="/images/grey-box.png"  class="cp-image-responsive"/>
   <p>Young fern gametophytes are only about 2 mm tall, making them impossible to photograph using conventional methods. @emblebi alumna Jennifer Deegan built & coded a camera system to produce <a href="https://buff.ly/2ScgJkz⠀">amazing photographs of these tiny plants.</a></p>
-  
+
   <p class="cp-meta">Jul 18, 2019 <a href="#">View post</a></p>
   <hr/>
   <ul>
@@ -92,7 +93,7 @@ embl_content_meta_properties:
           <li><a href="#">Interdisciplinary research</a></li>
         </ul>
     </div>
-     
+
   </div>
 </div>
 </section>
@@ -135,8 +136,8 @@ embl_content_meta_properties:
           <li><a href="#">Rome</a></li>
         </ul>
       </div>
-    
-     
+
+
   </div>
 </div>
 </section>
