--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -15,6 +15,7 @@ embl_content_meta_properties:
   lastreview: tocome
   reviewcycle: tocome
   expiry: tocome
+  templateEngineOverride: njk,md
 ---
 
 
@@ -132,7 +133,7 @@ embl_content_meta_properties:
       <li><a href="#">Szilárd Library</a></li>
       <li><a href="#">Cryo-Electron Microscopy Service Platform</a></li>
     </ul>
-    
+
   </div>
   <div>
     <h4>Hinxton (EMBL-EBI)</h4>
@@ -162,7 +163,7 @@ embl_content_meta_properties:
       <li><a href="#">Microscopy Facility</a></li>
       <li><a href="#">Gene Editing & Embryology Facility</a></li>
     </ul>
-    
+
   </div>
 </div>
 </div>
