--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -18,15 +18,14 @@ embl_content_meta_properties:
 templateEngineOverride: njk,md
 ---
 
-
-<section class="cp-container vf-grid vf-grid__col-1">
+<section class="cp-container vf-grid">
   <nav class="vf-navigation vf-navigation--global">
     <ul class="vf-navigation__list | vf-list--inline">
-      <li class="vf-navigation__item"><a href="index.html" class="vf-navigation__link">Home</a></li>
-      <li class="vf-navigation__item"><a href="research/index.html" class="vf-navigation__link">Research</a></li>
-      <li class="vf-navigation__item"><a href="services/index.html" class="vf-navigation__link">Services</a></li>
-      <li class="vf-navigation__item"><a href="training/index.html" class="vf-navigation__link">Training</a></li>
-      <li class="vf-navigation__item"><a href="about/index.html" class="vf-navigation__link">About EMBL</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/' | url }}" class="vf-navigation__link">Home</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/research' | url }}" class="vf-navigation__link">Research</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/services' | url }}" class="vf-navigation__link">Services</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/training' | url }}" class="vf-navigation__link">Training</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/about' | url }}" class="vf-navigation__link">About EMBL</a></li>
     </ul>
   </nav>
 </section>
