Tweaks to get images working and trying a new repo

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -41,7 +41,7 @@ templateEngineOverride: njk,md
 
 </div>
 <div>
-  <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+  <img src="images/grey-box.png"  class="cp-image-responsive"/>
   <p>Young fern gametophytes are only about 2 mm tall, making them impossible to photograph using conventional methods. @emblebi alumna Jennifer Deegan built & coded a camera system to produce <a href="https://buff.ly/2ScgJkz⠀">amazing photographs of these tiny plants.</a></p>
 
   <p class="cp-meta">Jul 18, 2019 <a href="#">View post</a></p>
@@ -62,7 +62,7 @@ templateEngineOverride: njk,md
 
   <div class=" vf-grid vf-grid__col-3">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="images/grey-box.png"  class="cp-image-responsive"/>
         <p class="cp-meta">Topic: <a href="#">Life is Amazing</a></p>
         <h3><a href="#">From Genomes to Ecosystems – Life is Amazing!</a></h3>
       </div>
@@ -175,7 +175,7 @@ templateEngineOverride: njk,md
       <p><a href="#">Browse all events</a></p>
     </div>
       <div class="cp-card">
-        <img src="/images/grey-box.png" class="cp-image-responsive" />
+        <img src="images/grey-box.png" class="cp-image-responsive" />
         <h3><a href="#">EMBL International Centre for Advanced Training (EICAT)</a></h3>
         <p>EICAT, EMBL's International Centre for Advanced Training, is devoted to excellence in training at all stages of careers in the life sciences.</p>
       </div>
@@ -223,7 +223,7 @@ templateEngineOverride: njk,md
   <p>Browse jobs by <a href="#">location</a> or <a href="#">category</a></p>
 </div>
 <div>
-  <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+  <img src="images/grey-box.png"  class="cp-image-responsive"/>
   <p><a href="#">Join EMBL</a> and you’ll join a community of world-class researchers and skilled professionals working together to uncover the secrets of life. We offer attractive conditions and benefits to attract and retain the brightest talent.</p>
 </div>
 </div>
@@ -235,7 +235,7 @@ templateEngineOverride: njk,md
 
   <div class=" vf-grid vf-grid__col-2">
       <div>
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="images/grey-box.png"  class="cp-image-responsive"/>
       </div>
       <p>EMBL’s collaboration with Tara began with the Tara Oceans expedition (2009–2013). The project was initiated by EMBL group leader Eric Karsenti, who led the mission’s scientific activities. EMBL coordinates the expedition’s scientific consortium, which includes more than 100 scientists from 18 partner institutions.</p>
   </div>
@@ -249,21 +249,21 @@ templateEngineOverride: njk,md
   <div class=" vf-grid vf-grid__col-3">
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="images/grey-box.png"  class="cp-image-responsive"/>
         <h3>Drug Discovery</h3>
         <p>A description of a topic and can run onto several lines in this card pattern.</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="images/grey-box.png"  class="cp-image-responsive"/>
         <h3>Cancer</h3>
         <p>A description of a topic and can run onto several lines in this card pattern.</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="images/grey-box.png"  class="cp-image-responsive"/>
         <h3>A title of a topic</h3>
         <p>A description of a topic and can run onto several lines in this card pattern.</p>
       </div>
