--- a/src/site/research/index.njk
+++ b/src/site/research/index.njk
@@ -41,7 +41,7 @@ templateEngineOverride: njk,md
   <h2>Browse by <a href="#units">Research Unit</a>, <a href="#discipline">discipline</a> or <a href="">A-Z</a></h2>
   </div>
   <div>
-    <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+    <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
   </div>
 
 </section>
@@ -62,7 +62,7 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Jan Ellenberg</a></h4>
       <p>Head of Cell Biology and Biophysics Unit</p>
     </div>
@@ -83,7 +83,7 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Anne Ephrussi</a></h4>
       <p>Head of Developmental Biology Unit</p>
     </div>
@@ -125,7 +125,7 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Eileen Furlong</a></h4>
       <p>Head of Unit</p>
     </div>
@@ -146,12 +146,12 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Peer Bork</a></h4>
       <p>Head of Unit and Senior Scientist</p>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Christoph Müller</a></h4>
       <p>Head of Unit and Senior Scientist</p>
     </div>
@@ -172,7 +172,7 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">Philip Avner</a></h4>
       <p>Head of EMBL Rome</p>
     </div>
@@ -194,7 +194,7 @@ templateEngineOverride: njk,md
       </ul>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4><a href="#">James Sharpe</a></h4>
       <p>Head of EMBL Barcelona</p>
     </div>
@@ -241,7 +241,7 @@ templateEngineOverride: njk,md
   <p>Browse jobs by <a href="#">location</a> or <a href="#">category</a></p>
 </div>
 <div>
-  <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+  <img src="{{'/images/grey-box.png' | url }}" class="cp-image-responsive"/>
   <p><a href="#">Join EMBL</a> and you’ll join a community of world-class researchers and skilled professionals working together to uncover the secrets of life. We offer attractive conditions and benefits to attract and retain the brightest talent.</p>
 </div>
 </div>
