Quick test from Tower

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -32,7 +32,7 @@ templateEngineOverride: njk,md
 
 <section class="cp-container vf-grid vf-grid__col-2">
 <div class="cp-hero">
-  <p class="cp-lede">EMBL is Europe's Centre of Excellence in life science <a href="#research">research</a>, <a href="#services">services</a> and <a href="#training">training</a> across <a href="#">six locations</a></p>
+  <p class="cp-lede">test EMBL is Europe's Centre of Excellence in life science <a href="#research">research</a>, <a href="#services">services</a> and <a href="#training">training</a> across <a href="#">six locations</a></p>
   <form>
           <input type="text" placeholder="What are you looking for?" class="cp-input">
           <button class="vf-button">Search</button>
