Fixing grey boxes

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -39,7 +39,7 @@ templateEngineOverride: njk,md
   <p><a href="#">Learn more about EMBL</a></p>
   </div>
   <div>
-    <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+    <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
   </div>
 </section>
 
@@ -50,7 +50,7 @@ templateEngineOverride: njk,md
 
   <div class=" vf-grid vf-grid__col-3">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <p class="cp-meta">Topic: <a href="#">Life is Amazing</a></p>
         <h3><a href="#">From Genomes to Ecosystems – Life is Amazing!</a></h3>
       </div>
@@ -117,7 +117,7 @@ templateEngineOverride: njk,md
   <p>Browse jobs by <a href="#">location</a> or <a href="#">category</a></p>
 </div>
 <div>
-  <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+  <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
   <p><a href="#">Join EMBL</a> and you’ll join a community of world-class researchers and skilled professionals working together to uncover the secrets of life. We offer attractive conditions and benefits to attract and retain the brightest talent.</p>
 </div>
 </div>
@@ -159,37 +159,37 @@ templateEngineOverride: njk,md
 <div class="vf-grid vf-grid__col-3"">
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Barcelona</h3>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Hamburg</h3>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Heidelberg</h3>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>EMBL-EBI Hinxton</h3>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Grenoble</h3>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Rome</h3>
       </div>
     </a>
