--- a/src/components/vf-componenet-rollup/index.scss
+++ b/src/components/vf-componenet-rollup/index.scss
@@ -1,3 +1,4 @@
+@import 'package.variables.scss';
 /*
  *
  * styles.css
@@ -5,13 +6,15 @@
  * Include this style sheet as a quick way to get *everything*,
  * or follow the guide at github.com/visual-framework/vf-core
  * to learn how to build custom and optimised CSS.
- *
+ */
+/*! Component: #{map-get($componentInfo, 'name')}
+ * Version: #{map-get($componentInfo, 'version')}
+ * Location: #{map-get($componentInfo, 'location')}
+ * VF Core version in use: #{map-get($componentInfo, 'vfCoreVersion')}
  */
 
 @import 'vf-global-custom-properties.scss';
 
-@import 'vf-global-variables.scss';
-@import '_vf-variables.shame.scss';
 @import 'vf-global-variables.scss';
 @import 'vf-border-radius.variables.scss';
 @import 'vf-breakpoints.variables.scss';
@@ -22,6 +25,7 @@
 @import 'vf-font-families.variables.scss';
 @import 'vf-links.variables.scss';
 @import 'vf-spacing.map.scss';
+@import 'vf-zindex.map.scss';
 
 @import 'vf-colors.custom-properties.scss';
 @import 'vf-ui-colors.custom-properties.scss';
@@ -113,6 +117,7 @@ html, button {
   @import 'vf-summary/vf-summary--article.scss';
   @import 'vf-summary/vf-summary--job.scss';
   @import 'vf-summary/vf-summary--profile.scss';
+  @import 'vf-summary/vf-summary--publication.scss';
   @import 'vf-summary/vf-summary--news.scss';
   @import 'vf-summary/vf-summary--has-image.scss';
 
@@ -141,7 +146,7 @@ html, button {
 
 /* All Visual Framework Boilerplates */
 
-@import 'embl-group-page/embl-group-page.scss';
+// none here
 
 /* All Visual Framework Deprecated components */
 
@@ -156,3 +161,9 @@ html, button {
 // This is a demonstration of vf-core's ability to warn and proceed on missing
 // sass imports
 @import 'vf-somepattern/vf-i-dont-exist.scss';
+
+// Local components
+@import 'vf-sample/vf-sample.scss';
+
+// If you have any locoal overrides, put them in:
+@import 'vf-local-overrides/vf-local-overrides.scss';
