embl-logo--responsive is deprecated

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -12,7 +12,7 @@
 
   <header class="vf-global-header">
     <div class="vf-global-header__inner">
-      {% render '@embl-logo--responsive' %}
+      {% render '@embl-logo' %}
        <p class="vf-global-header__site-name">{{ text }}</p>
       
       {# {% render '@vf-navigation--global' %} #}
