--- a/src/site/_includes/layouts/cp-base.njk
+++ b/src/site/_includes/layouts/cp-base.njk
@@ -13,7 +13,7 @@
   <header class="vf-header">
       <div class="vf-global-header">
         <div class="vf-global-header__inner">
-            {% render '@embl-logo--responsive' %}
+            {% render '@embl-logo' %}
             <p class="vf-global-header__site-name">{{ text }}</p>
             
             <nav class="vf-navigation vf-navigation--global">
