Update with v2 link

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -21,8 +21,14 @@ templateEngineOverride: njk,md
 <section class="vf-content">
 <div>
 
+[Version 2](https://v2--embl-conceptual-pages.netlify.com/)
+: Changes to research, and services following consultation with Strategy team.
+
+[Version 1](https://v1--embl-conceptual-pages.netlify.com/)
+: Initial content prototype with a focus on homepage, research, services, training, and About EMBL.
+
  - ["Master" the latest changes](https://master--embl-conceptual-pages.netlify.com/)
- - [Version 1](https://v1--embl-conceptual-pages.netlify.com/)
+
 
 </div>
 </section>
