--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Content prototype
+title: EMBL.org content prototype
 date: 2018-11-08 12:34:56
 subtitle: Links to the versions of the content prototype available.
 layout: layouts/post.njk
