--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -24,7 +24,7 @@ embl_content_meta_properties:
     <ul class="vf-navigation__list | vf-list--inline">
       <li class="vf-navigation__item"><a href="{{ '/' | url }}" class="vf-navigation__link">Home</a></li>
       <li class="vf-navigation__item"><a href="{{ '/research' | url }}" class="vf-navigation__link">Research</a></li>
-      <li class="vf-navigation__item"><a href="{{ '/services' | url }}" class="vf-navigation__link">Services</a></li>
+      <li class="vf-navigation__item"><a href="{{ '/services' | url }}" class="vf-navigation__link">Services &amp; Facilities</a></li>
       <li class="vf-navigation__item"><a href="{{ '/training' | url }}" class="vf-navigation__link">Training</a></li>
       <li class="vf-navigation__item"><a href="{{ '/about' | url }}" class="vf-navigation__link">About EMBL</a></li>
     </ul>
@@ -32,23 +32,69 @@ embl_content_meta_properties:
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
-  <h1>Services at EMBL</h1>
+  <h1>Services &amp; Facilities at EMBL</h1>
   <p>EMBL provides the world’s most comprehensive range of freely available and up-to-date molecular data resources and tools, core molecular biology services.</p>
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
-  <div class="cp-box">
-  <form>
-    <input type="text" placeholder="What are you looking for?" class="cp-input">
-    <button class="vf-button">Search</button>
-  </form>
-  <p>Browse <a href="#">Tools</a>, <a href="#">Data Resources</a>, <a href="#">Core Facilities</a>, <a href="#">Type</a>, <a href="#">A - Z</a></p>
-  </div>
+<div>
+<h2><a href="#">Structural biology &rarr;</a></h2>
+<p>Intro to services what do we mean and what are they at EMBL</p>
+<div class="vf-grid vf-grid__col-2">
+<div>
+  <h4><a href="#">EMBL Hamburg</a></h4>
+  <p>EMBL Hamburg operates an <a href="#">integrated infrastructure for life science applications</a> using synchrotron radiation situated at the PETRA storage ring, operated by <a href="#">Helmholtz Research Centre DESY</a> in Hamburg-Bahrenfeld.</p>
+</div>
+<div>
+<h4><a href="#">EMBL Grenoble</a></h4>
+  <p>EMBL Grenoble provides research services such as <a href="#">access to third generation synchrotron beamlines for macromolecular crystallography</a> and <a href="#">instruments for neutron crystallography on the high flux neutron source of the ILL</a></p>
+</div>
+</div>
+</div>
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
-<h3><a href="#">Core Facilities &rarr;</a></h3>
+<h2><a href="#">Tools &amp; Data Resources &rarr;</a></h2>
+<p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date molecular data resources.</p>
+<div class="cp-box">
+  <form>
+    <input type="text" placeholder="What are you looking for?" class="cp-input">
+    <button class="vf-button">Search</button>
+  </form>
+  <p>Browse <a href="#">Tools</a>, <a href="#">Data Resources</a>, <a href="#">Type</a>, <a href="#">A - Z</a></p>
+  </div>
+<div class="vf-grid vf-grid__col-2">
+  <div>
+    <h4>Top Tools</h4>
+    <ul>
+      <li><a href="#">Clustal Omega</a><br/>Multiple sequence alignment of DNA or protein sequences. Clustal Omega replaces the older ClustalW alignment tools.</li>
+      <li><a href="#">InterProScan</a><br />InterProScan searches sequences against InterPro's predictive protein signatures.</li>
+      <li><a href="#">BLAST [protein]</a><br />Fast local similarity search tool for protein sequence databases.</li>
+      <li><a href="#">BLAST [nucleotide]</a><br />Fast local similarity search tool for nucleotide sequence databases.</li>
+      <li><a href="#">HMMER</a><br />Fast sensitive protein homology searches using profile hidden Markov models (HMMs) for querying against both sequence and HMM target databases.</li>
+    </ul>
+    <button class="vf-button">Browse all tools</button>
+  </div>
+  <div>
+    <h4>Top Data Resources</h4>
+    <ul>
+      <li><a href="#">Ensembl</a><br />Genome browser, API and database, providing access to reference genome annotation</li>
+      <li><a href="#">UniProt</a><br />A comprehensive resource for protein sequence and functional annotation.</li>
+      <li><a href="#">PDBe</a><br />The European resource for the collection, organisation and dissemination of 3D structural data (from PDB and EMDB) on biological macromolecules and their complexes.</li>
+      <li><a href="#">Europe PMC</a><br />A database to search the worldwide life sciences literature</li>
+      <li><a href="#">Expression Atlas</a><br />An added-value database that shows which genes/proteins are expressed under which conditions, and how expression differs between conditions.</li>
+      <li><a href="#">ChEMBL</a><br />An open data resource of binding, functional and ADMET bioactivity data.</li>
+    </ul>
+     <button class="vf-button">Browse all data resources</button>
+  </div>
+</div>
+</div>
+</section>
+
+<section class="cp-container vf-grid vf-grid__col-1">
+<div>
+<h2><a href="#">EMBl Heidelberg Core Facilities &rarr;</a></h2>
 <p>The EMBL model for Core Facilities has developed a first-rate reputation in the European life sciences community. </p>
 <div class="vf-grid vf-grid__col-2">
   <div>
@@ -72,39 +118,7 @@ embl_content_meta_properties:
 
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
-<h3><a href="#">Bioinformatics @EMBL-EBI &rarr;</a></h3>
-<p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date molecular data resources.</p>
-<div class="vf-grid vf-grid__col-2">
-  <div>
-    <h4>Tools</h4>
-    <ul>
-      <li><a href="#">Clustal Omega</a><br/>Multiple sequence alignment of DNA or protein sequences. Clustal Omega replaces the older ClustalW alignment tools.</li>
-      <li><a href="#">InterProScan</a><br />InterProScan searches sequences against InterPro's predictive protein signatures.</li>
-      <li><a href="#">BLAST [protein]</a><br />Fast local similarity search tool for protein sequence databases.</li>
-      <li><a href="#">BLAST [nucleotide]</a><br />Fast local similarity search tool for nucleotide sequence databases.</li>
-      <li><a href="#">HMMER</a><br />Fast sensitive protein homology searches using profile hidden Markov models (HMMs) for querying against both sequence and HMM target databases.</li>
-    </ul>
-    <button class="vf-button">Browse all tools</button>
-  </div>
-  <div>
-    <h4>Data Resources</h4>
-    <ul>
-      <li><a href="#">Ensembl</a><br />Genome browser, API and database, providing access to reference genome annotation</li>
-      <li><a href="#">UniProt</a><br />A comprehensive resource for protein sequence and functional annotation.</li>
-      <li><a href="#">PDBe</a><br />The European resource for the collection, organisation and dissemination of 3D structural data (from PDB and EMDB) on biological macromolecules and their complexes.</li>
-      <li><a href="#">Europe PMC</a><br />A database to search the worldwide life sciences literature</li>
-      <li><a href="#">Expression Atlas</a><br />An added-value database that shows which genes/proteins are expressed under which conditions, and how expression differs between conditions.</li>
-      <li><a href="#">ChEMBL</a><br />An open data resource of binding, functional and ADMET bioactivity data.</li>
-    </ul>
-     <button class="vf-button">Browse all data resources</button>
-  </div>
-</div>
-</div>
-</section>
-
-<section class="cp-container vf-grid vf-grid__col-1">
-<div>
-<h3>Services at EMBL locations</h3>
+<h2>Services &amp; Facilities at EMBL locations</h2>
 <div class="vf-grid vf-grid__col-2">
   <div>
     <h4>Barcelona</h4>
