--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -33,7 +33,7 @@ embl_content_meta_properties:
 
 <section class="cp-container vf-grid vf-grid__col-1">
   <h1>Services at EMBL</h1>
-  <p>EMBL provides the world’s most comprehensive range of freely available and up-to-date molecular data resources and tools, core molecular biology services.</p>
+  <p>EMBL provides the world’s most comprehensive range of freely available and up-to-date services, tools and data resources for studies in molecular biology.</p>
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
@@ -73,7 +73,7 @@ embl_content_meta_properties:
 <section class="cp-container vf-grid vf-grid__col-1">
 <div>
 <h3><a href="#">Bioinformatics @EMBL-EBI &rarr;</a></h3>
-<p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date molecular data resources.</p>
+<p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date resources and tools for molecular biology data.</p>
 <div class="vf-grid vf-grid__col-2">
   <div>
     <h4>Tools</h4>
@@ -108,7 +108,8 @@ embl_content_meta_properties:
 <div class="vf-grid vf-grid__col-2">
   <div>
     <h4>Barcelona</h4>
-    <p>Description of services available at this site.</p>
+    <p>The Mesoscopic Imaging Faciltiy provides microscope access and support services to enable 3D imaging of biological tissues over time.
+</p>
     <ul>
       <li><a href="#">Mesoscopic Imaging Facility</a></li>
     </ul>
@@ -125,7 +126,7 @@ embl_content_meta_properties:
     </ul>
     <hr />
     <h4>Heidelberg</h4>
-    <p>Description of services available at this site.</p>
+    <p>The Core Facilities at EMBL Heidelberg provide access to high-throughput analysis including microarrays, protein production, mass spectrometry, DNA sequencing, advanced light and electron microscopes and chemical genomics</p>
     <ul>
       <li><a href="#">Core Facilities</a></li>
       <li><a href="#">IT Services</a></li>
@@ -137,14 +138,16 @@ embl_content_meta_properties:
   </div>
   <div>
     <h4>Hinxton (EMBL-EBI)</h4>
-    <p>Description of services available at this site.</p>
+    <p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date digital resources for molecular data.
+
+.</p>
     <ul>
       <li><a href="#">Tools</a></li>
       <li><a href="#">Data Resources</a></li>
     </ul>
     <hr />
     <h4>Grenoble</h4>
-    <p>Description of services available at this site.</p>
+    <p>EMBL Grenoble provides access to third-generation synchrotron beamlines for macromolecular crystallography, as well as access to instruments for neutron crystallography on the high flux neutron source of the Institut Laue-Langevin.</p>
     <ul>
       <li><a href="#">Synchrotron Beamline Access</a></li>
       <li><a href="#">High-Throughput Crystallisation</a></li>
@@ -155,7 +158,7 @@ embl_content_meta_properties:
     </ul>
     <hr />
     <h4>Rome</h4>
-    <p>Description of services available at this site.</p>
+    <p>EMBL Rome provides access to a variety of services for cell counting, mouse models, and genetic engineering.</p>
     <ul>
       <li><a href="#">Flow Cytometry Facility</a></li>
       <li><a href="#">Genetic & Viral Engineering Facility</a></li>
