--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -126,7 +126,7 @@ embl_content_meta_properties:
     </ul>
     <hr />
     <h4>Heidelberg</h4>
-    <p>The Core Facilities at EMBL Heidelberg provide access to high-throughput analysis including microarrays, protein production, mass spectrometry, DNA sequencing, advanced light and electron microscopes and chemical genomics</p>
+    <p>The Core Facilities at EMBL Heidelberg provide access to high-throughput analysis including microarrays, protein production, mass spectrometry, DNA sequencing, advanced light and electron microscopes and chemical genomics.</p>
     <ul>
       <li><a href="#">Core Facilities</a></li>
       <li><a href="#">IT Services</a></li>
@@ -138,9 +138,7 @@ embl_content_meta_properties:
   </div>
   <div>
     <h4>Hinxton (EMBL-EBI)</h4>
-    <p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date digital resources for molecular data.
-
-.</p>
+    <p>The European Bioinformatics Institute (EMBL-EBI) maintains the world’s most comprehensive range of freely available and up-to-date digital resources for molecular data.</p>
     <ul>
       <li><a href="#">Tools</a></li>
       <li><a href="#">Data Resources</a></li>
