--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -35,8 +35,8 @@ templateEngineOverride: njk,md
 
 <section class="cp-container vf-grid vf-grid__col-2">
   <div>
-  <p class="cp-lede">Content focussed on EMBL's culture and place within life sciences </p>
-  <p><a href="#">Learn more about EMBL</a></p>
+  <p class="cp-lede">A centre of excellence for interdisciplinary research within the life sciences</p>
+  <p><a href="#">Find out more about EMBL's culture</a></p>
   </div>
   <div>
     <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
@@ -55,13 +55,13 @@ templateEngineOverride: njk,md
         <h3><a href="#">From Genomes to Ecosystems – Life is Amazing!</a></h3>
       </div>
        <div>
-          <p class="cp-meta"><a href="#">Topic name</a></p>
-          <h3><a href="#">Research Content Item</a></h3>
-          <p>A description of several lines should go here to give context to the content</p>
+          <p class="cp-meta"><a href="#">Health</a></p>
+          <h3><a href="#">B cells linked to immunotherapy</a></h3>
+          <p>New evidence that B cells might play an important role in immunotherapy for melanoma</p>
           <hr />
-          <p class="cp-meta"><a href="#">Topic name</a></p>
-          <h3><a href="#">Research Content Item</a></h3>
-          <p>A description of several lines should go here to give context to the content</p>
+          <p class="cp-meta"><a href="#">Techniques</a></p>
+          <h3><a href="#">Happy hour for time-resolved crystallography</a></h3>
+          <p>Researchers from Hamburg simplify time-resolved X-ray crystallography</p>
       </div>
     <div>
       <h4>More news</h4>
