--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -123,13 +123,37 @@ templateEngineOverride: njk,md
 </div>
 </section>
 
-<section class="cp-container vf-grid vf-grid__col-1">
-  <h2>Alumni</h2>
-  <ul>
-    <li>News</li>
-    <li>Upcoming events</li>
-    <li>Directory</li>
-  </ul>
+<section id="research" class="cp-container vf-grid vf-grid__col-1">
+<div>
+ <h2><a href="research/index.html">Alumni News &rarr;</a></h2>
+
+  <div class=" vf-grid vf-grid__col-3">
+      <div class="cp-card">
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
+        <p class="cp-meta">Topic: <a href="#">Life is Amazing</a></p>
+        <h3><a href="#">A Nobel prize for EMBL alumnus Jane Doe</a></h3>
+      </div>
+       <div>
+          <p class="cp-meta"><a href="#">Health</a></p>
+          <h3><a href="#">B cells linked to immunotherapy</a></h3>
+          <p>New evidence that B cells might play an important role in immunotherapy for melanoma</p>
+          <hr />
+          <p class="cp-meta"><a href="#">Techniques</a></p>
+          <h3><a href="#">Happy hour for time-resolved crystallography</a></h3>
+          <p>Researchers from Hamburg simplify time-resolved X-ray crystallography</p>
+      </div>
+    <div>
+      <h4>More news</h4>
+      <ul>
+          <li><a href="#">Alumni around the globe</a><span class="cp-meta">Jul 7</span></li>
+          <li><a href="#">50 years of EMBL</a><span class="cp-meta">Jul 3</span</li>
+          <li><a href="#">EMBL World Alumni Day </a><span class="cp-meta">Jun 11</span</li>
+
+        </ul>
+    </div>
+
+  </div>
+</div>
 </section>
 
 <section class="cp-container vf-grid vf-grid__col-1">
