--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -36,7 +36,7 @@ templateEngineOverride: njk,md
 <section class="cp-container vf-grid vf-grid__col-2">
   <div>
   <p class="cp-lede">A centre of excellence for interdisciplinary research within the life sciences</p>
-  <p><a href="#">Find out more about EMBL's culture</a></p>
+  <p><a href="#">Find out more about the culture and history of EMBL</a></p>
   </div>
   <div>
     <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
@@ -130,17 +130,17 @@ templateEngineOverride: njk,md
   <div class=" vf-grid vf-grid__col-3">
       <div class="cp-card">
         <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
-        <p class="cp-meta">Topic: <a href="#">Life is Amazing</a></p>
+        <p class="cp-meta">Topic: <a href="#">Nobel prize</a></p>
         <h3><a href="#">A Nobel prize for EMBL alumnus Jane Doe</a></h3>
       </div>
        <div>
-          <p class="cp-meta"><a href="#">Health</a></p>
-          <h3><a href="#">B cells linked to immunotherapy</a></h3>
-          <p>New evidence that B cells might play an important role in immunotherapy for melanoma</p>
+          <p class="cp-meta"><a href="#">France</a></p>
+          <h3><a href="#">EMBL in France: Where science meets the sea</a></h3>
+          <p>September’s alumni event in Marseille will coincide with a Tara stopover</p>
           <hr />
-          <p class="cp-meta"><a href="#">Techniques</a></p>
-          <h3><a href="#">Happy hour for time-resolved crystallography</a></h3>
-          <p>Researchers from Hamburg simplify time-resolved X-ray crystallography</p>
+          <p class="cp-meta"><a href="#">Obituary</a></p>
+          <h3><a href="#">In remembrance of Suzanne Eaton</a></h3>
+          <p>The life science community is deeply saddened by the death of Suzanne Eaton</p>
       </div>
     <div>
       <h4>More news</h4>
